// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`:ie9plus should transform :ie9plus(...) into an ie9plus hack (multiple selectors) 1`] = `
"@media screen and (min-width:0\\\\0) and (min-resolution: +72dpi) {.fooga .booga {
    color: red;
}
}"
`;

exports[`:ie9plus should transform :ie9plus(...) into an ie9plus hack (single selector) 1`] = `
"@media screen and (min-width:0\\\\0) and (min-resolution: +72dpi) {.fooga {
    color: red;
}
}"
`;

exports[`:ie9plus should work with postcss-nested 1`] = `
".fooga {
    color: red;
}
    
    @media screen and (min-width:0\\\\0) and (min-resolution: +72dpi) {
    
    .fooga {
        color: blue;
    }
}"
`;
